fix table overflow

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -57,3 +57,7 @@ table.tbl-th-centered > thead > tr > th {
 td {
     word-break: break-all
 }
+
+.table-avoid-overflow {
+    overflow-x: auto;
+}
